lazy features will be in 0.1.3

--- a/docs/src/content/docs/docs/language/lazy.mdx
+++ b/docs/src/content/docs/docs/language/lazy.mdx
@@ -4,8 +4,8 @@ title: Lazy predicates (experimental)
 
 import Dusa from '../../../../components/Dusa.astro';
 
-**WARNING: this is an unusually experimental feature and is likely to break in
-future releases.**
+**WARNING: this is an unusually experimental feature introduced in 0.1.3 and
+is likely to break, change, or be removed in future releases.**
 
 Lazy predicates allow a limited form of "backward-chaining," or 
 "Prolog-style," or "top-down" logic programming in Dusa. Normally, a program
