--- a/docs/src/content/docs/docs/language/lazy.mdx
+++ b/docs/src/content/docs/docs/language/lazy.mdx
@@ -43,7 +43,7 @@ the "magic sets" or "demand" transformation. It's helpful to have a bit of a
 mental model of how this transformation actually works. The program above is
 transformed into (more or less) this program by the demand transformation:
 
-<Dusa predicates={['nat', 'p', 'q']} code={`
+<Dusa predicates={['nat', 'demand_nat', 'p', 'q']} code={`
 
 #lazy nat
 nat z :- demand_nat z.
@@ -78,3 +78,31 @@ plus (s N) M is (s P) :- plus N M is P.
 `}/>
 
 [Explore this example](https://dusa.rocks/#jsonz=q1YqUbJSyi9IzVPSUUrJTy7NTc0DiSjnJFZVKhTklBbH5IFIhSoFP4XMYgU_PShfo1jBT1PBFySmUawQoKlgpQtWruAHEQzQi8mLyVNOSc1NzEtRgGmBoypNTU1NVC7EeKVaAA)
+
+Lazy predicates can refer to other lazy predicates, which enables this
+Prolog-style implementation of quicksort:
+
+<Dusa predicates={['sort', 'partition', 'append']} code={`
+
+#lazy sort
+sort nil is nil.
+sort (cons X Xs) is Sorted :-
+   partition X Xs is (tuple As Bs),
+   append (sort As) (cons X (sort Bs)) is Sorted.
+
+#lazy partition
+partition X nil is (tuple nil nil).
+partition X (cons Y Ys) is (tuple (cons Y As) Bs) :-
+   partition X Ys is (tuple As Bs),
+   Y <= X.
+partition X (cons Y Ys) is (tuple As (cons Y Bs)) :-
+   partition X Ys is (tuple As Bs),
+   Y > X.
+
+#lazy append
+append nil Ys is Ys.
+append (cons X Xs) Ys is (cons X (append Xs Ys)).
+
+`}>
+
+[Explore this example](https://dusa.rocks/#jsonz=lVHbasMwDP0V4b7E0Jm2u6Z0g-4Pxl5iCAyT5MEss0PtPGxj_z7LltN0bLAGHMvS0Tm6fDLPtswOnWFL1tpmfOsMehbwNOrm1dmDr01tFr36eIf0wj8Y3YN2eAnyFI01DiqoHMfIc_B1LWwvagMAgzp47bU1EYDxwo9D38HewaPjywhSQyijhSLS7QNNpkyegJsxi2NZE3lt5jpUIgnhKxwuTkFJQoJMVRM4e7GIIPtbF_KvLiTs7qH6l0xIy4HY3HkyD1ElDyENrzY0RGw35UonJu98R8ScR0yIChM4j8RKvbi0RQTGHaB0StlsyFhfknFD920OrI_o659ZZUlGzi5n6KuJe4LfrTJD3OLpJ9jXNw)
